--- a/src/app/page.module.scss
+++ b/src/app/page.module.scss
@@ -1,7 +1,8 @@
+@import "@/styles/variables.module.scss";
 .main{
    .posts{
-    padding-left: 144px;
-    padding-right: 144px;
-    width: 1920px;
+    padding-left: $sideMargin;
+    padding-right: $sideMargin;
+    max-width: 1920px;
    }
 }
